--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,13 +6,15 @@ arize-otel>=0.8.1
 aiohttp>=3.9.0
 opentelemetry-sdk>=1.21.0
 opentelemetry-exporter-otlp>=1.21.0
-openinference-instrumentation-openai
-openinference-instrumentation-langchain
+openinference-instrumentation-langchain>=0.1.19
+openinference-instrumentation-litellm>=0.1.0
+openinference-instrumentation>=0.1.12
 langgraph>=0.2.55
 langchain>=0.3.7
 langchain-openai>=0.2.10
 langchain-community>=0.3.5
-openinference-instrumentation-litellm
 litellm
 python-dotenv>=1.0.0
 requests>=2.31.0
+pyairtable>=2.1.0
+pandas>=2.0.0
