--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,27 +9,14 @@ services:
       - "8000:8000"
     environment:
       - OPENAI_API_KEY=${OPENAI_API_KEY}
-      - SERPER_API_KEY=${SERPER_API_KEY}
+      - OPENROUTER_API_KEY=${OPENROUTER_API_KEY}
+      - OPENROUTER_MODEL=${OPENROUTER_MODEL}
       - ARIZE_SPACE_ID=${ARIZE_SPACE_ID}
       - ARIZE_API_KEY=${ARIZE_API_KEY}
     volumes:
       - ./backend:/app
+      - ./frontend/index.html:/app/../frontend/index.html:ro
     command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload
-    networks:
-      - trip-planner
-
-  frontend:
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile
-    ports:
-      - "3000:3000"
-    volumes:
-      - ./frontend:/app
-      - /app/node_modules
-    command: npm start
-    depends_on:
-      - backend
     networks:
       - trip-planner
 
