chore(render): use uv for installs; document uv in README install step

--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,10 @@ services:
     env: python
     plan: free
     rootDir: backend
-    buildCommand: pip install -r requirements.txt
+    buildCommand: |
+      curl -LsSf https://astral.sh/uv/install.sh | sh -s -- -y
+      export PATH="$HOME/.local/bin:$PATH"
+      uv pip install --system -r requirements.txt
     startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
     autoDeploy: true
     envVars:
