--- a/render.yaml
+++ b/render.yaml
@@ -5,12 +5,19 @@ services:
     plan: free
     rootDir: backend
     buildCommand: |
-      curl -LsSf https://astral.sh/uv/install.sh | sh -s -- -y
+      curl -LsSf https://astral.sh/uv/install.sh | sh
       export PATH="$HOME/.local/bin:$PATH"
-      uv pip install --system -r requirements.txt
+      if command -v uv >/dev/null 2>&1; then
+        uv pip install --system -r requirements.txt
+      else
+        echo "uv not found, falling back to pip";
+        pip install -r requirements.txt
+      fi
     startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
     autoDeploy: true
     envVars:
+      - key: PYTHON_VERSION
+        value: 3.11.9
       - key: OPENAI_API_KEY
         sync: false
       - key: OPENROUTER_API_KEY
