--- a/render.yaml
+++ b/render.yaml
@@ -5,15 +5,17 @@ services:
     plan: free
     rootDir: backend
     buildCommand: |
-      curl -LsSf https://astral.sh/uv/install.sh | sh
+      curl -LsSf https://astral.sh/uv/install.sh | sh || true
       export PATH="$HOME/.local/bin:$PATH"
+      python -m venv .venv
+      . .venv/bin/activate
       if command -v uv >/dev/null 2>&1; then
-        uv pip install --system -r requirements.txt
+        uv pip install -r requirements.txt
       else
-        echo "uv not found, falling back to pip";
+        pip install -U pip
         pip install -r requirements.txt
       fi
-    startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
+    startCommand: .venv/bin/uvicorn main:app --host 0.0.0.0 --port $PORT
     autoDeploy: true
     envVars:
       - key: PYTHON_VERSION
