--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,17 +1,47 @@
-# Minimal .env for AI Trip Planner
-# Copy this file to backend/.env (or to project root as .env)
-# Do not commit real secrets.
+# AI Trip Planner - Environment Configuration
+# Copy this file to .env and fill in your keys
 
-# Choose ONE provider
+# ========================================
+# LLM Provider (REQUIRED - choose one)
+# ========================================
+
+# Option 1: OpenAI
 OPENAI_API_KEY=your_openai_api_key_here
-# Or use OpenRouter (OpenAI-compatible)
+
+# Option 2: OpenRouter (OpenAI-compatible alternative)
 # OPENROUTER_API_KEY=your_openrouter_api_key_here
 # OPENROUTER_MODEL=openai/gpt-4o-mini
 
-# Optional: Observability with Arize (https://app.arize.com)
-# ARIZE_SPACE_ID=your_arize_space_id_here
-# ARIZE_API_KEY=your_arize_api_key_here
+# ========================================
+# Observability (Optional but recommended)
+# ========================================
 
-# Optional: Deterministic dev mode (no external LLM calls)
+# Arize Platform for tracing and monitoring
+# Sign up at https://app.arize.com
+ARIZE_SPACE_ID=your_arize_space_id_here
+ARIZE_API_KEY=your_arize_api_key_here
+
+# ========================================
+# Optional Features
+# ========================================
+
+# RAG: Enable vector search over curated local guides
+# Requires OPENAI_API_KEY for embeddings
+# Set to 1 to enable, 0 to disable (default: 0)
+ENABLE_RAG=0
+
+# Embeddings model for RAG (only used if ENABLE_RAG=1)
+OPENAI_EMBED_MODEL=text-embedding-3-small
+
+# Airtable: Store and label trace data
+# Get these from https://airtable.com/account
+# AIRTABLE_API_KEY=your_airtable_api_key_here
+# AIRTABLE_BASE_ID=your_airtable_base_id_here
+# AIRTABLE_TABLE_NAME=trip_planner_traces
+
+# ========================================
+# Development
+# ========================================
+
+# Test mode: Use fake LLM responses (no API calls)
 # TEST_MODE=1
-
