--- a/backend/.env.example
+++ b/backend/.env.example
@@ -33,6 +33,14 @@ ENABLE_RAG=0
 # Embeddings model for RAG (only used if ENABLE_RAG=1)
 OPENAI_EMBED_MODEL=text-embedding-3-small
 
+# Web Search: Enable real-time web search in tools
+# Without these keys, tools fall back to LLM-generated responses
+# Tavily (recommended): Sign up at https://tavily.com
+# TAVILY_API_KEY=your_tavily_api_key_here
+
+# SerpAPI (alternative): Sign up at https://serpapi.com
+# SERPAPI_API_KEY=your_serpapi_api_key_here
+
 # Airtable: Store and label trace data
 # Get these from https://airtable.com/account
 # AIRTABLE_API_KEY=your_airtable_api_key_here
